<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Mamás del Río</string>
  <string name="action_settings">Settings</string>
  <string name="edit_label">Message to Send:</string>
  <string name="message_hint">Type a message to send via Whatsapp!</string>
  <string name="title_activity_form_picker">FormPickerActivity</string>
  <string name="death">Muerto</string>
  <string name="mamas_del_rio">Mamás del Río</string>
  <string name="msg_unimplemented">Only Births is implemented!</string>
  <string name="title_activity_do_birth">DoBirthActivity</string>
  <string name="label_dni">DNI:</string>
  <string name="enter_dni">Escribir DNI</string>
  <string name="label_month_of_birth">Mes de Nacimiento</string>
  <string name="enter_month_of_birth">Escribir mes del nacimiento</string>
  <string name="label_day_of_birth">Día de nacimiento</string>
  <string name="enter_day_of_birth">Escribir día del nacimiento</string>
  <string name="send_to_boat">Enviar al Barco Amazon Hope</string>
  <string name="dni">DNI</string>

  <!-- Strings from UPCH. For now I am purposefully NOT putting these in a
  scoped ('-es') values folder to facilitate demos and debugging on English
  language devices. -->

  <!-- General -->
  <string name="have_dni">¿Tiene DNI?</string>
  <string name="es_yes">Sí</string>
  <string name="es_no">No</string>
  <string name="enter_location">Ingresar foo localización (GPS)</string>
  <string name="register_location">Registrar localización</string>
  <string name="send_to_whatsapp_group">Enviar al Grupo de Whastapp de Mamás del Río</string>
  <string name="send_to_whatsapp_doctor">Enviar al Teléfono de Mamás del Río</string>
  <string name="do_not_send_to_group">Enviar al teléfono, no al grupo</string>
  <string name="location">Localización</string>
  <string name="lat_label">Lat: </string>
  <string name="lng_label">Lng: </string>
  <string name="alt_label">Alt: </string>
  <string name="acc_label">Pre: </string>
  <string name="community_name">Nombre de su comunidad</string>

  <!-- Pregnancies -->
  <string name="pregnancy">Embarazo</string>
  <string name="pregnancies">Embarazos</string>
  <string name="write_dni">Escribir DNI</string>
  <string name="write_names">Escribir nombres y apellidos</string>
  <string name="last_period_known">¿Sabe la fecha de su última regla?</string>
  <string name="last_period_date">¿Cuál es la fecha de su última regla?</string>
  <string name="do_not_know">No sabe</string>
  <string name="no_response">No responde</string>
  <string name="pregnancy_control">Con respecto a su embarazo, ¿Tuvo algún control del embarazo en el Centro de Salud?</string>
  <string name="month_begin_control">¿En qué mes del embarazo empezó sus controles prenatales en el centro de salud?</string>

  <!-- Alarms -->
  <string name="alarm">Alarma</string>
  <string name="alarms">Alarmas</string>
  <string name="enter_alarm">Ingresar signo de alarma</string>
  <string name="alarm_painful_urination">Ardor al orinar</string>
  <string name="alarm_fever">Fiebre</string>
  <string name="alarm_contractions">Contracciones antes de tiempo</string>
  <string name="alarm_liquid">Pérdida de líquido</string>
  <string name="alarm_baby_move">El bebé sin movimientos</string>
  <string name="alarm_tingling">Hinchazon de pies, manos o cara</string>
  <string name="alarm_blood">Sangrado o manchas de sangre</string>
  <string name="alarm_headache">Dolor de cabeza</string>
  <string name="alarm_vomit">Vómitos abundantes</string>
  <string name="alarm_other">Otro</string>

  <!-- Births -->
  <string name="birth">Nacimiento</string>
  <string name="births">Nacimientos</string>
  <string name="enter_dni_of_mother">Escribir DNI de la madre</string>
  <string name="mother_has_dni">¿La mamá tiene DNI?</string>
  <string name="birth_date">Fecha de nacimiento</string>
  <!-- NOT provided by UPCH, but relevant for births -->
  <string name="year">Año</string>
  <string name="month">Mes</string>
  <string name="day">Día</string>

  <!-- Risks -->
  <string name="risks">Riesgos</string>
  <string name="enter_problem">Ingresar problema</string>
  <string name="risk_pregnant_before_18">Embarazo antes de los 18 años</string>
  <string name="risk_pregnant_after_35">Embarazo despues de los 35 años</string>
  <string name="risk_high_bp_previously">Presión alta en anteriores embarazos</string>
  <string name="risk_cs_previously">Cesarea anterior</string>
  <string name="risk_first_pregnancy">Primer embarazo</string>
  <string name="risk_domestic_violence">Violencia doméstica</string>
  <string name="risk_abandoned">Abandono Social</string>
  <string name="risk_hiv">Infección por VIH</string>
  <string name="risk_dengue">Dengue</string>
  <string name="risk_chikunguna">Chikunguña</string>
  <string name="risk_zika">Zika</string>
  <string name="risk_leptospirosis">Leptospirosis</string>
  <string name="risk_malaria">Malaria</string>
  <string name="risk_exposure_petr">Exposición a petroleo</string>
  <string name="risk_exposure_pest">Exposición a pesticidas</string>
  <string name="risk_anemia">Anemia</string>
  <string name="risk_diabetes">Diabetes</string>
  <string name="risk_mental_health">Problemas de salud mental</string>

  <!-- Outcomes -->
  <string name="outcomes">Desenlaces</string>
  <string name="report_outcome">Desenlace a reportar</string>
  <string name="complications">Complicaciones</string>
  <string name="abortion">Aborto</string>
  <string name="maternal_death">Muerte Materna</string>
  <string name="neonatal_death">Muerte Neonatal</string>
  <string name="fine">Está bien</string>

  <string name="pregnancy_complications">Complicaciones del parto</string>
  <string name="baby_complications">Complicaciones del recién nacido</string>
  <string name="mother_complications">Complicaciones de la mamá</string>
  <string name="low_weight">Bajo peso al nacer</string>
  <string name="malformed">Malformacion congénita</string>
  <string name="lesions">Lesiones en el parto</string>
  <string name="yellow_color">Coloración amarilla</string>
  <string name="rapid_breathing">Respiración muy rápida</string>
  <string name="stress">Mucho restraso en el llanto al nacer</string>
  <string name="infected_cord">Cordón umbilical infectado</string>
  <string name="premature">Prematuridad</string>
  <string name="other">Otro</string>



  <string name="excessive_bleeding">Hemorragia excesiva</string>
  <string name="tearing">Desgarro</string>
  <string name="high_fever">Fiebre alta</string>
  <string name="intense_pain">Dolor intenso en el vientre</string>
  <string name="secretions">Secreciones malolientes</string>
  <string name="intense_pain_pant">Dolor intenso en pantorrilas</string>
  <string name="endur">Endurecimiento de las mamas</string>
  <string name="sadness">Mucha tristeza</string>


  <string name="date_of_abortion">Fecha del aborto</string>

  <string name="date_of_death">Fecha de la muerte</string>
  <string name="probable_cause">Causa probable</string>

  <!-- for geopoints -->
  <string name="get_location">Get Location</string>
  <string name="provider_disabled_error">Error: Provider Disabled</string>
  <string name="getting_location">Getting Location</string>
  <string name="please_wait_long">Please Wait</string>
  <string name="accept_location">Accept</string>
  <string name="cancel_location">Cancel</string>
  <string name="location_provider_accuracy">Location Provider Accuracy</string>
  <string name="location_accuracy">Location Accuracy</string>

  <!-- messages for whatsapp -->
  <!-- takes community -->
  <string name="msg_pregnancy">Hola Mamás del Río. Tenemos una gestante nueva en %1$s.</string>
  <!-- takes alarm, community -->
  <string name="msg_alarm">Hola Mamás del Río. Tenemos una gestante con %1$s en %2$s.</string>
  <!-- takes community -->
  <string name="msg_birth">Hola Mamás del Río. Tenemos un recién nacido en %1$s.</string>
  <!-- takes risk, community -->
  <string name="msg_risk">Hola Doctores de Mamás del Río. Tenemos una gestante con %1$s en %2$s.</string>
  <!-- takes community, mother complication, baby complication -->
  <string name="msg_outcome_complication">Hola Doctores de Mamás del Río. Tenemos una complicación en %1$s. Madre: %2$s. Recién nacido: %3$s.</string>
  <!-- takes community -->
  <string name="msg_outcome_abortion">Hola Doctores de Mamás del Río. Estamos reportando un aborto en %1$s.</string>
  <!-- takes community -->
  <string name="msg_outcome_mdeath">Hola Doctores de Mamás del Río. Estamos reportando una muerte materna en %1$s.</string>
  <!-- takes community -->
  <string name="msg_outcome_bdeath">Hola Doctores de Mamás del Río. Estamos reportando la muerte de un recién nacido en %1$s.</string>

  <!-- mother death probable causes -->
  <string name="mdeath_cause_bleeding">Hemorragia grave</string>
  <string name="mdeath_cause_infection">Infección</string>
  <string name="mdeath_cause_pressure">Presión alta</string>
  <string name="mdeath_cause_complication">Complicación en el parto</string>
  <string name="mdeath_cause_abortion">Aborto peligroso</string>

  <!-- baby death probable causes -->
  <string name="bdeath_cause_premature">Prematuridad</string>
  <string name="bdeath_cause_suffocate">Asfixia</string>
  <string name="bdeath_cause_infection">Infección</string>


</resources>
