<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/have_dni"/>

  <RadioGroup
      android:id="@+id/shared_nameordni_yesno_group"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <RadioButton
        android:id="@+id/shared_nameordni_yesno_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/es_yes"/>

    <RadioButton
        android:id="@+id/shared_nameordni_yesno_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/es_no"/>

  </RadioGroup>

  <TextView
      android:id="@+id/shared_nameordni_dnilabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/enter_dni"/>
  <EditText
      android:id="@+id/shared_nameordni_enter_dni"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/dni"/>


  <TextView
      android:id="@+id/shared_nameordni_namelabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/write_names"/>
  <EditText
      android:id="@+id/shared_nameordni_enter_names"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

</LinearLayout>