<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/last_period_known"/>

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/preg_lastperiod_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/es_yes"/>

        <RadioButton
            android:id="@+id/preg_lastperiod_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/es_no"/>

        <RadioButton
            android:id="@+id/preg_lastperiod_dontknow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_not_know"/>

        <RadioButton
            android:id="@+id/preg_lastperiod_noanswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_response"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/preg_lastperiod_date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_period_date"/>


    </LinearLayout>

</LinearLayout>