<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/report_outcome"/>

  <RadioGroup
      android:id="@+id/outcome_select_outcome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/outcome_outcome_complications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complications"/>

    <RadioButton
        android:id="@+id/outcome_outcome_abortion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abortion"/>

    <RadioButton
        android:id="@+id/outcome_outcome_motherdeath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maternal_death"/>

    <RadioButton
        android:id="@+id/outcome_outcome_babydeath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neonatal_death"/>

  </RadioGroup>

</LinearLayout>