<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context="org.mamasdelrio.android.DoBirthActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_dni_of_mother" />
    <EditText
        android:id="@+id/birth_enter_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />
    <EditText
        android:id="@+id/birth_enter_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="4" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/month" />
    <Spinner
        android:id="@+id/birth_enter_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"/>
    <Spinner
        android:id="@+id/birth_enter_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/birth_send"
        android:text="@string/send_to_whatsapp_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </LinearLayout>

</ScrollView>
