<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RadioButton
      android:id="@+id/shared_yndn_yes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/es_yes"/>

  <RadioButton
      android:id="@+id/shared_yndn_no"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/es_no"/>

  <RadioButton
      android:id="@+id/shared_yndn_dontknow"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/do_not_know"/>

  <RadioButton
      android:id="@+id/shared_yndn_noanswer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/no_response"/>

</RadioGroup>