<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sudars.sendtowhatsapp.FormPickerActivity">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/mamas_del_rio"
        android:textSize="36dp"/>

    <Button
        android:id="@+id/do_pregnancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregnancies"/>

    <Button
        android:id="@+id/do_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarms"/>

    <Button
        android:id="@+id/do_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/births"/>

    <Button
        android:id="@+id/do_risk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/risks"/>

    <Button
        android:id="@+id/do_outcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outcomes"/>

  </LinearLayout>

</RelativeLayout>
