<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/have_dni"/>

  <RadioGroup
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <RadioButton
        android:id="@+id/shared_nameordni_yesno_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/es_yes"/>

    <RadioButton
        android:id="@+id/shared_nameordni_yesno_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/es_no"/>

  </RadioGroup>

  <!-- Either DNI or Names, so FrameLayout is ok. -->
  <FrameLayout
      android:id="@+id/shared_nameordni_enter_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/shared_nameordni_dni_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/enter_dni"/>
      <EditText
          android:id="@+id/shared_nameordni_enter_dni"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/dni"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shared_nameordni_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/write_names"/>
      <EditText
          android:id="@+id/shared_nameordni_enter_names"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
    </LinearLayout>


  </FrameLayout>


</LinearLayout>