<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pregnancy_period_date_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_period_date"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"/>
    <EditText
        android:id="@+id/pregnancy_last_period_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="4"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/month"/>
    <Spinner
        android:id="@+id/pregnancy_last_period_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"/>
    <Spinner
        android:id="@+id/pregnancy_last_period_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>